# Plume

./: .gitignore  CMakeLists.txt  Plume.cc  PythiaSettings.cmnd  README.md  gui.mac  run.mac  run.sh  vis.mac  vis_file.mac
analysis/: 1ana.cc  ana.cc  ana2.cc  ana2MT.cc  draw.py  group.cc  groupHIMT.cc  groupMT.cc  groupMTopt.cc  hana.cc  histana.cc  mergeMT.cc  numOfLight.cc  pmt_ana.c  pmt_ana.ipynb  reco.cc  recombine.cc  run.bash  runHist.sh  runMT.screen.sh  runMT.sh  run_pmt.sh  stabana.cc  stability.sh
include/: HitDataStructure.hh  LConst.hh  L_DetectorConstruction.h  L_EventAction.h  L_Hit.h  L_PhysicsList.h  L_PrimaryGeneratorAction.h  L_RunAction.h  L_SensitiveDetector.h  L_SteppingAction.h  L_VolumeStructures.h
src/: L_DetectorConstruction.cpp  L_EventAction.cpp  L_Hit.cpp  L_PhysicsList.cpp  L_PrimaryGeneratorAction.cpp  L_RunAction.cpp  L_SensitiveDetector.cpp  L_SteppingAction.cpp
